Fix cube jumping on slide 1

--- a/sass/_page-the-cloning-process.scss
+++ b/sass/_page-the-cloning-process.scss
@@ -153,7 +153,7 @@
 @keyframes ig-cube-1 {
     0%   { width: 1%;  top: 20%; left: 85%; }
     50%  {                       left: 45%; }
-    100% { width: 10%; top: 50%; left: 50%; }
+    100% { width: 12%; top: 50%; left: 50%; }
 }
 
 @keyframes ig-cube-2 {
